tests/ui/g-par-empty-lane.stderr
error[E0277]: `g::par(left, right)` arms must be non-empty protocol fragments
 --> tests/ui/g-par-empty-lane.rs:6:20
  |
6 |     let _ = g::par(StepNil::PROGRAM, StepNil::PROGRAM);
  |             ------ ^^^^^^^^^^^^^^^^ parallel arm is empty
  |             |
  |             required by a bound introduced by this call
  |
  = help: the trait `hibana::global::NonEmptyParallelArm` is not implemented for `StepNil`
note: required by a bound in `par`
 --> src/global.rs
  |
  | pub const fn par<LeftSteps, RightSteps>(
  |              --- required by a bound in this function
...
  |     LeftSteps: NonEmptyParallelArm,
  |                ^^^^^^^^^^^^^^^^^^^ required by this bound in `par`

error[E0277]: `g::par(left, right)` arms must be non-empty protocol fragments
 --> tests/ui/g-par-empty-lane.rs:6:38
  |
6 |     let _ = g::par(StepNil::PROGRAM, StepNil::PROGRAM);
  |             ------                   ^^^^^^^^^^^^^^^^ parallel arm is empty
  |             |
  |             required by a bound introduced by this call
  |
  = help: the trait `hibana::global::NonEmptyParallelArm` is not implemented for `StepNil`
note: required by a bound in `par`
 --> src/global.rs
  |
  | pub const fn par<LeftSteps, RightSteps>(
  |              --- required by a bound in this function
...
  |     RightSteps: NonEmptyParallelArm + TailLoopControl,
  |                 ^^^^^^^^^^^^^^^^^^^ required by this bound in `par`
